# PacBio

./: .gitignore  Makefile.am  SR_draw  Tuprules.tup  configure.ac  license.txt  license_perl.txt
configs/: default.conf
include/: MurmurHash3.h  backtrace.hpp  debug.hpp  multiplexer.hpp
lib/: MurmurHash3.cpp  Tupfile  backtrace.cc
misc/: SR_draw  sr_overlap_dot_graph
src/: BasicDataStructure.h  GraphConstruction.h  SparseMapper.cpp
src_aligner/: Alignment.h  GraphConstruction.h  Query.h  SparseMapper.cpp
src_jf_aligner/: Tupfile  bounded_counter.hpp  caching_map.hpp  coarse_aligner.cc  coarse_aligner.hpp  coords_parsing.cc  coords_parsing.hpp  create_mega_reads.cc  create_mega_reads_cmdline.yaggo  fine_aligner.cc  fine_aligner.hpp  frag_info.hpp  jf_aligner.cc  jf_aligner.hpp  jf_aligner_cmdline.yaggo  least_square_2d.hpp  lf_forward_list.hpp  lf_forward_size_list.hpp  longest_path_overlap_graph2.cc  longest_path_overlap_graph2_cmdline.yaggo  mer_pos_hash.hpp  merge_coords.cc  merge_coords_cmdline.yaggo  misc.cc  misc.hpp  output_file.hpp  overlap_graph.cc  overlap_graph.hpp  pb_aligner.cc  pb_aligner.hpp  super_read_name.cc  super_read_name.hpp  superread_parser.cc  superread_parser.hpp  tile_mega_reads.cc  tile_mega_reads_cmdline.yaggo  union_find.cc  union_find.hpp
src_lis/: lis.hpp  lis_align.hpp  test_lis.cc
src_mega_reads/: Tupfile  UnionFind.pm  add_mega_read_sequences.pl  add_pb_seq.pl  analyze_mega_gaps.sh  break_contigs.pl  build_mega_read.sh  build_mega_read_graph.sh  check_mega_read  correct_with_k_unitigs.sh  correct_with_k_unitigs_fast.pl  create_fasta_frg.sh  create_merged_mega-reads.pl  deduplicate_contigs.sh  deduplicate_unitigs.sh  determineUnjoinablePacbioSubmegas.perl  eval.sh  extract_best_match_coords.pl  extract_merges_mega-reads.pl  extract_single_best_match_coords_file.pl  extract_unique_mega-reads.pl  fasta2frg.pl  fastqToFasta.pl  fill_gap  filter_delta_file_for_qrys.pl  filter_matches.pl  findGapsInCoverageOfPacbios.cc  findGapsInCoverageOfPacbios.perl  findGapsInCoverageOfPacbios_cmdline.yaggo  fragScaff.sh  gap_distribution  getDistancesBetweenPacbioMatchesForDiffUnitigs.perl  get_super_read_sizes.cc  get_super_read_sizes.pl  get_super_read_sizes_cmdline.yaggo  join_mega_reads_trim.onepass.nomatch.pl  join_mega_reads_trim.onepass.pl  join_mega_reads_trim.onepass.ref.pl  join_mega_reads_trim.pl  longest_path_overlap_graph  (+39 more)
src_overlapper/: BasicDataStructure.h  BuildContigs.h  GraphConstruction.h  GraphSimplification.h  IntervalFileOperations.h  OverlapperTest.cpp  ReadsOperation.h  ScaffoldingDataStructure.h
src_psa/: 48bit_index.hpp  48bit_iterator.hpp  barrier.hpp  compact_dna.hpp  compact_iterator.hpp  divsufsort_private.h  global_timer.hpp  mer_sa.hpp  mer_sa_imp.hpp  parallel_iterator_traits.hpp  prefetch_iterator_traits.hpp  psa.hpp  slice.hpp  valgrind.supp
src_reconcile/: break_contigs.pl  chromosome_scaffolder.sh  close_scaffold_gaps.sh  compute_contig_positions.pl  create_merged_sequences.pl  evaluate_consensus_error_rate.sh  evaluate_consensus_error_rate_parallel.sh  evaluate_splits.pl  extract_merges.pl  fill_unaligned_gaps.pl  find_repeats.pl  fix_consensus_from_vcf.pl  introduce_errors_fasta_file.pl  make_rejoin_links.pl  masurca-polish.sh  masurca_scaffold.sh  merge_contigs.pl  merge_contigs.sh  merge_matches_and_tile_coords_file.pl  merge_matches_and_tile_coords_file_new.pl  merge_scaffolds.sh  newmerge.sh  output_reconciled_scaffolds.pl  polca.sh  polish_with_illumina_assembly.sh  polish_with_illumina_assembly_pbdagcon.sh  reconcile_consensus.pl  reconcile_hybrid_contigs_chromosomes.sh  reconcile_matches.pl  samba.sh  splitScaffoldsAtNs.sh
src_ref/: build_human_reference.sh  extract_chrM.sh  join_mega_reads_trim.onepass.ref.pl  mega_reads_assemble_ref.sh  recompute_astat_superreads_CA8.sh
src_trio/: classify_reads.pl  resolve_trio.sh
tests/: Makefile.am  SR_draw  Tupfile  build_mega_read.sh  build_mega_read_graph.sh  build_mega_reads.pl  build_mega_reads_kmerscore.pl  filter_matches.pl  findPathAcrossPacbioRead.perl  join_mega_reads.pl  join_mega_reads_trim.pl  longest_path_overlap_graph  misc.hpp  reconciliate_mega_reads.pl  test_MurmurHash3.cc  test_align_coordinates.cc  test_aligner_output.cc  test_bounded_counter.cc  test_caching_map.cc  test_coords_parsing.cc  test_jf_mer.cc  test_kmers_info.cc  test_least_square_2d.cc  test_lf_forward_bounded_list.cc  test_lf_forward_list.cc  test_lis.cc  test_lis_align.cc  test_mer_pos_hash.cc  test_multiplexer.cc  test_pacbio.fa  test_parsesequence.cc  test_pb_aligner.cc  test_super_read_name.cc  test_superread_parser.cc  test_tiling.cc  test_union_find.cc  wdiffn
tests/aligner_output/: Tupfile  compare_coarse_fine_alignments  coords_forward_expected  coords_normal_expected  details_normal_expected  test_unitigs_lengths
tests/mega_reads_output/: Tupfile  coords  expect_coords  kUnitigLengths.txt  pb.fa  sr.fa
tests/output/: Tupfile  coords_forward_expected  test_aligner_output.sh  test_super_reads.fa
